# lizard_cuma

./: CMakeLists.txt  Kconfig.projbuild  README.md  partitions.csv  sdkconfig
components/lovyangfx/: CMakeLists.txt
components/lovyangfx/boards.cmake/: esp-idf.cmake  pico-sdk.cmake
components/lovyangfx/doc/: Panel_CVBS.md
components/lovyangfx/examples/Advanced/LVGL_PlatformIO/src/: lv_demo_conf.h
components/lovyangfx/examples/HowToUse/1_simple_use/: 1_simple_use.ino
components/lovyangfx/examples/HowToUse/2_user_setting/: 2_user_setting.ino
components/lovyangfx/examples/Sprite/ClockSample/: ClockSample.ino
components/lovyangfx/examples/Sprite/MeterSample/: MeterSample.ino
components/lovyangfx/examples/Sprite/PartyParrot/: PartyParrot.ino  partyparrot.h
components/lovyangfx/examples/Sprite/TransitionFX/: LGFX_SpriteFX.hpp  TransitionFX.ino
components/lovyangfx/examples/Standard/DrawLineThickness/: DrawLineThickness.ino
components/lovyangfx/examples/Test/build_test/: platformio.ini  platformio_atmelsam.ini  platformio_esp32.ini  platformio_esp8266.ini  platformio_native.ini  platformio_rpipico.ini
components/lovyangfx/examples_for_PC/CMake_FrameBuffer/: user_code.cpp
components/lovyangfx/examples_for_PC/CMake_WASM/: CMakeLists.txt  user_code.cpp
components/lovyangfx/examples_for_PC/PlatformIO_SDL/: platformio.ini
components/lovyangfx/examples_for_picosdk/i2c/: CMakeLists.txt  LGFX_config.hpp
components/lovyangfx/examples_for_picosdk/spi/: main.cpp
components/lvgl/: CMakeLists.txt
components/lvgl/src/widgets/label/: lv_label.c
(+23 files in other folders)
